deployment/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-streamlit
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: new-movie-app

        imagePullPolicy: Never
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8501
