deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-streamlit
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 8501
    
  type: NodePort
